--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "author": "iLaD",
   "license": "ISC",
   "dependencies": {
+    "2checkout-node": "^0.0.1",
+    "axios": "^1.3.4",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^5.11.12",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2",
+    "multer": "^1.3.0",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.7"
   }
 }
